@@ -10,6 +10,7 @@
 * Fix - Add support for MYR (Malaysian ringgit) for Alipay.
 * Add - New Settings UI.
 * Add - Add Stripe API to generate connection tokens.
+* Fix - Hide payment request button when variations of a variable product are out-of-stock.
 
 = 5.7.0 - 2021-10-20 =
 * Fix - Enable use of saved payment methods converted to SEPA payments.
